--- a/src/components/SmartHostForm/SmartHostForm.css
+++ b/src/components/SmartHostForm/SmartHostForm.css
@@ -3,6 +3,6 @@
     justify-content: center;
     max-width: 40rem;
     margin: 0 auto;
-    padding: 2rem;
+    padding: 0 2rem 2rem 2rem;
     flex-direction: column;
 }
