--- a/src/components/Section/Section.css
+++ b/src/components/Section/Section.css
@@ -1,10 +1,15 @@
-section > h4 {
-    margin: 0;
+.sectionHeader {
+    display: flex;
+    justify-content: space-between;
+}
+
+.sectionHeader > .title {
+    font-weight: bold;
 }
 
 section > hr {
     margin: 0.5rem 0 1.5rem 0;
-    border-color: var(--accent-color);
+    border-color: var(--color-primary);
 }
 
 section {
