--- a/src/components/SmartHostForm/Rooms/SingleRoomCategory.css
+++ b/src/components/SmartHostForm/Rooms/SingleRoomCategory.css
@@ -6,15 +6,14 @@
 }
 
 .roomCategory {
-    font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     flex: 1;
+    text-transform: capitalize;
 }
 
 .numberOfRooms {
     text-align: center;
-    font-size: 2rem;
-    font-weight: bold;
+    font-size: 1.2rem;
     flex: 1;
 }
 
@@ -25,6 +24,6 @@
     align-items: center;
 }
 
-.roomButtonsContainer > button {
-    min-width: 2rem;
-}
+/*.roomButtonsContainer > button {*/
+/*    min-width: 2rem;*/
+/*}*/
