--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,25 @@ body {
 
 button {
   cursor: pointer;
-  border-radius: 3px;
-  border: 1px solid black;
-  padding: 6px;
-  background-color: var(--light-gray);
+  background-color: var(--color-primary);
+  display: inline-block;
+  border: none;
+  padding: 0.2rem 1rem;
+  margin: 0;
+  text-decoration: none;
+  min-width: 3rem;
+  color: #ffffff;
+  font-family: sans-serif;
+  font-size: 1rem;
+  text-align: center;
+  transition: background 250ms ease-in-out,
+  transform 150ms ease;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+button:hover {
+  filter: brightness(1.1);
 }
 
 input {
@@ -20,12 +35,11 @@ input {
 }
 
 :root {
-  --accent-color: #00b1ff;
-  --light-gray: #d1d1d1;
-  --add-guest-background: var(--accent-color);
-  --remove-guest-background: #ff7373;
+  --color-primary:#4d6a83;
+  --reset-button-color: #9d9d9d;
+  --remove-guest-background: #f15d5d;
   --guest-card-gap: .3rem;
-  --guest-card-dimension: 6rem;
+  --guest-card-dimension: 5rem;
 
 }
 
