--- a/src/components/SmartHostForm/Guests/Guests.css
+++ b/src/components/SmartHostForm/Guests/Guests.css
@@ -6,6 +6,8 @@
 }
 
 .guest {
+    overflow: hidden;
+    position: relative;
     display: flex;
     min-width: var(--guest-card-dimension);
     height: var(--guest-card-dimension);
@@ -18,4 +20,22 @@
 
 .guest:hover {
     background-color: var(--remove-guest-background);
+}
+
+.guestCornerMarkBackground {
+    position: absolute;
+    top: -25%;
+    right: -25%;
+    width: 50%;
+    height: 50%;
+    background-color: var(--color-primary);
+    rotate: 45deg;
+}
+
+.guestCornerMarkSign {
+    position: absolute;
+    top: -1%;
+    right: 4%;
+    color: white;
+    font-size: 0.8rem;
 }
