--- a/src/components/SmartHostForm/Guests/Guests.css
+++ b/src/components/SmartHostForm/Guests/Guests.css
@@ -19,9 +19,12 @@
     transition-duration: 0.1s;
 }
 
-.guest:hover {
-    background-color: var(--remove-guest-background);
+@media screen and (hover: hover) {
+    .guest:hover {
+        background-color: var(--remove-guest-background);
+    }
 }
+
 
 .guestCornerMarkBackground {
     position: absolute;
