--- a/src/components/SmartHostForm/Guests/Guests.css
+++ b/src/components/SmartHostForm/Guests/Guests.css
@@ -19,7 +19,7 @@
     transition-duration: 0.1s;
 }
 
-@media screen and (hover: hover) {
+@media (hover: hover) {
     .guest:hover {
         background-color: var(--remove-guest-background);
     }
